--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ServiceContext": "Data Source=LAPTOP-JURR2GF5\\SQLEXPRESS;Initial Catalog=RecipesDB;Integrated Security=True;MultipleActiveResultSets=True;App=EntityFramework;TrustServerCertificate=True"
+    "ServiceContext": "Data Source=LAPTOP-JURR2GF5\\SQLEXPRESS01;Initial Catalog=Recipes;Integrated Security=True;MultipleActiveResultSets=True;App=EntityFramework;TrustServerCertificate=True"
   }
 }
